@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-7.1,v 1.1.2.79 2016/04/15 19:07:25 snj Exp $
+# $NetBSD: CHANGES-7.1,v 1.1.2.80 2016/04/15 20:24:30 mrg Exp $
 
 A complete list of changes from the NetBSD 7.0 release to the NetBSD 7.1
 release:
@@ -3783,3 +3783,7 @@ xsrc/external/mit/MesaLib/dist/src/mesa/main/extensions.c 1.2
 	library is dlopen/dlclose'd !
 	[riastradh, ticket #1158]
 
+libexec/httpd/cgi-bozo.c                        1.34
+
+	Fix the build: use %zu instead of %lu for size_t.
+	[mrg, ticket #1141]
